# StereoMac

./: .gitignore  CMakeLists.txt  DisplayImage.cpp  DisplayStereo.cpp  README.md  barrel_dist.cpp
barrel/: CMakeLists.txt  barrel_dist.cpp  barrel_dist.hpp
